--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@fontsource/inter": "5.0.4",
     "@fontsource/plus-jakarta-sans": "5.0.4",
     "@fontsource/roboto-mono": "5.0.4",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "5.13.7",
     "@mui/lab": "5.0.0-alpha.135",
     "@mui/material": "5.13.7",
@@ -39,24 +42,29 @@
     "@untitled-ui/icons-react": "0.1.1",
     "apexcharts": "3.41.0",
     "date-fns": "2.30.0",
+    "formik": "^2.4.3",
     "i18next": "23.2.7",
     "lodash.isequal": "4.5.0",
     "nprogress": "0.2.0",
     "numeral": "2.0.6",
     "prop-types": "15.8.1",
+    "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
     "react-hot-toast": "2.4.1",
     "react-i18next": "13.0.1",
+    "react-qr-code": "^2.0.12",
     "react-router": "6.14.1",
     "react-router-dom": "6.14.1",
     "react-slick": "0.29.0",
+    "sass": "^1.65.1",
     "simplebar-react": "3.2.4",
     "slick-carousel": "1.8.1",
     "stylis": "4.3.0",
-    "stylis-plugin-rtl": "2.1.1"
+    "stylis-plugin-rtl": "2.1.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/lodash.isequal": "4.5.6",
